--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,52 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+    <ion-toolbar>    
+      <ion-title size="large">All Ads</ion-title>
+      <ion-buttons class="mr-1" slot="end">
+        <ion-button class="btn" routerLink="/ad-insert"> 
+          <ion-icon name="add-circle-outline" size="large"></ion-icon>  
+        </ion-button>
+        <ion-button class="primary"> 
+          <ion-icon name="list-outline" size="large"></ion-icon>
+        </ion-button>
+        <ion-button class="logout">
+          <ion-icon name="log-out-outline" size="large"></ion-icon>
+        </ion-button>
+      </ion-buttons>
     </ion-toolbar>
+
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+
+        <ion-card class="card" [style.background-image]="img" routerLink="/ad-details/1">
+          <ion-card-header>
+            <ion-card-title>Ads Title</ion-card-title>
+            <ion-card-subtitle>September 2023</ion-card-subtitle>
+          </ion-card-header>                
+        </ion-card>
+
+        <ion-card class="card" [style.background-image]="img">
+          <ion-card-header>
+            <ion-card-title>Ads Title</ion-card-title>
+            <ion-card-subtitle>September 2023</ion-card-subtitle>
+          </ion-card-header>                
+        </ion-card>
+
+        <ion-card class="card" [style.background-image]="img">
+          <ion-card-header>
+            <ion-card-title>Ads Title</ion-card-title>
+            <ion-card-subtitle>September 2023</ion-card-subtitle>
+          </ion-card-header>                
+        </ion-card>
+
+      </ion-col>
+      
+    </ion-row>
+  </ion-grid>
 </ion-content>
