--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,41 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-header {
+  margin-top: 3rem;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-card-title, ion-card-subtitle {
+  color: white;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+ion-col {
+  margin-bottom: 0px;
 }
 
-#container a {
-  text-decoration: none;
+ion-icon {
+  color: white;
 }
+
+ion-button.btn {
+  
+  color: white;
+  --background: orangered;
+}
+
+ion-button.logout {
+  color: white;
+  --background: red;
+}
+
+ion-button.primary {
+  color: white;
+  --background: #3880ff;
+}
+
+.card {
+  border-radius: 20px;
+  height: 200px;
+  background-size: cover;
+  
+  background-repeat: no-repeat;
+  color: white;
+}
+
