--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,53 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+ion-input, ion-list, ion-textarea {
+    border: solid rgba(229, 227, 227, 0.847);
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+ion-textarea {
+    height: 200px;
+    margin-top: 1rem;
+}
+
+ion-input, ion-textarea {
+    input {
+        padding-left: 0.5rem !important;
+    }
+
+    label {
+        padding-left: 0.5rem !important;
+        
+        color: rgb(78, 77, 77);
+    }
+}
+
+
+
+
+.mt-5 {
+    margin-top: 5rem
+}
+
+.mr-1 {
+    margin-right: 1rem;
+}
+
+.p-3 {
+    padding: 3rem;
+}
+
+.pt-1 {
+    padding-top: 1rem;
+}
+
+.pb-1 {
+    padding-bottom: 1rem;
+}
+
+a {
+    color: orangered;
+}
