--- a/src/global.scss
+++ b/src/global.scss
@@ -63,6 +63,14 @@ ion-input, ion-textarea {
     padding: 3rem;
 }
 
+.p-2 {
+    padding: 2rem;
+}
+
+.p-1 {
+    padding: 1rem;
+}
+
 .pt-1 {
     padding-top: 1rem;
 }
