--- a/src/app/ad-details/ad-details.page.scss
+++ b/src/app/ad-details/ad-details.page.scss
@@ -23,7 +23,6 @@
   }
 
   .img {
-    border: solid;
     height: 35vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -36,6 +35,7 @@
     border-top-right-radius: 50px;
     background-color: white;
     padding: 2rem;
+    margin-bottom: 4rem;
     height: 62vh;
     z-index: 1;
     position: relative;
