--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,10 +8,10 @@
         <ion-button class="btn" routerLink="/ad-insert"> 
           <ion-icon name="add-circle-outline" size="large"></ion-icon>  
         </ion-button>
-        <ion-button class="primary"> 
+        <ion-button class="primary" routerLink="/ad-owner/{{uid}}"> 
           <ion-icon name="list-outline" size="large"></ion-icon>
         </ion-button>
-        <ion-button class="logout">
+        <ion-button class="logout" (click)="logout()">
           <ion-icon name="log-out-outline" size="large"></ion-icon>
         </ion-button>
       </ion-buttons>
@@ -22,29 +22,27 @@
   
   <ion-grid>
     <ion-row>
-      <ion-col size="12">
+      <ion-col size="12" *ngIf="!status.loading && advertissements.length !== 0">
 
-        <ion-card class="card" [style.background-image]="img" routerLink="/ad-details/1">
-          <ion-card-header>
-            <ion-card-title>Ads Title</ion-card-title>
-            <ion-card-subtitle>September 2023</ion-card-subtitle>
-          </ion-card-header>                
-        </ion-card>
+        <div *ngFor="let ad of advertissements">
+          <ion-card class="card" [style.background-image]="'url('+''+ad.photo+''+')'" routerLink="/ad-details/{{ad.id}}">
+            <ion-card-header>
+              <ion-card-title>{{ad.title | titlecase}}</ion-card-title>
+              <ion-card-subtitle>{{ad.created_at}}</ion-card-subtitle>
+            </ion-card-header>                
+          </ion-card>
+        </div>
 
-        <ion-card class="card" [style.background-image]="img">
-          <ion-card-header>
-            <ion-card-title>Ads Title</ion-card-title>
-            <ion-card-subtitle>September 2023</ion-card-subtitle>
-          </ion-card-header>                
-        </ion-card>
+      </ion-col>
 
-        <ion-card class="card" [style.background-image]="img">
-          <ion-card-header>
-            <ion-card-title>Ads Title</ion-card-title>
-            <ion-card-subtitle>September 2023</ion-card-subtitle>
-          </ion-card-header>                
-        </ion-card>
+      <ion-col size="12" *ngIf="status.loading" align="center">
+        <ion-spinner class="center" color="warning"></ion-spinner>
+      </ion-col>
 
+      <ion-col size="12" *ngIf="!status.loading && advertissements.length===0" align="center">
+        <h1 class="center">
+          No Ads Fund !
+        </h1>
       </ion-col>
       
     </ion-row>
